--- a/server/package.json
+++ b/server/package.json
@@ -3,24 +3,28 @@
   "version": "1.0.0",
   "description": "fullstack server application",
   "main": "index.js",
-  "type": "module",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "scripts": {
     "dev": "nodemon index.js",
     "dev:test": "NODE_ENV=test nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest --verbose --detectOpenHandles"
   },
   "author": "Cihan Erenler",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1",
-    "bcrypt": "^5.1.1",
     "joi": "^17.12.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
