--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
+    "start": "node index.js",
     "dev:test": "NODE_ENV=test nodemon index.js",
     "test": "NODE_ENV=test jest --verbose --detectOpenHandles",
     "build:ui": "rm -rf build && cd ../client && npm run build && cp -r build ../server && cd ../client rm -rf build",
